[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitkit"
version = "2024.12.3.dev"
authors = [
  { name="Adam Bates", email="adambates923@gmail.com" },
  { name="Brianna Nielson", email="bairbrianna@gmail.com" },
]
description = "A Python package for dealing with values that have units"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/bbair/unitkit"
"Bug Tracker" = "https://github.com/abates20/unitkit/issues"
